feat(server): Add, Remove, List DnsServers RPCs
